--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,14 @@
       align-items: center;}
 
 /*MAIN STYLES--------------------------------------*/
-/*
+
+#orca-bg {
+    width: 100%;
+    height: 300px;
+    background-image: url(../images/orca_background.svg);
+    background-repeat: repeat-x;
+    background-size: contain;
+}
 
 body.blue{
 	background-image: url(../images/blue_background-11.png);
@@ -33,7 +40,7 @@ body.orca{
 	background-repeat: no-repeat;
 	background-size: cover;
 }
-*/
+
 
 /*NAV LINKS--------------------------------------*/
 a{
