--- a/css/style.css
+++ b/css/style.css
@@ -294,19 +294,19 @@ a{
 
 
 
-/*IMAGES-------------<img src="images/homepage_whale.png" class="homepage_img alt="whale group illustration">------------------------*/
+/*IMAGES-------------------------------------*/
 
-/*
+
 	img.homepage_img{
 	  width: 100%;
 	  display: flex;
 	  margin-top:-100px;
 	  margin-left: auto;
 	  margin-right: auto;
-	  z-index:-99;
+	  opacity: 0.5;
 	  padding-top:40px;
 	}
-*/
+
 	}
 
 	img.orca_img_1{
@@ -350,6 +350,8 @@ a{
 	  padding-top:20px;
 	  padding:20px;
 	}
+
+
 
 
 /*IMAGE ANIMATIONS--------------------------------------*/
