--- a/css/style.css
+++ b/css/style.css
@@ -362,12 +362,12 @@ a{
 .wave {
   stroke-dasharray: 1000;
   stroke-dashoffset: 1000;
-  animation: dash 5s linear forwards;
+  animation: dash 5s linear backwards;
 }
 
 @keyframes dash {
   to {
-    stroke-dashoffset: 0;
+    stroke-dashoffset: 12;
   }
 }
 
