humpbak header is set WEBSITE IS SET

--- a/css/style.css
+++ b/css/style.css
@@ -135,7 +135,7 @@ a{
 	}	
 		
 	.humpback-h1{
-		padding-top:60px;
+		padding-top:70px;
 	}			
 	
 
@@ -198,7 +198,7 @@ a{
 	h1.humpback_header {
 		width:100%;
 		font-family: 'Staatliches', cursive;
-		color:#087495;
+		color:#96c6e2;
 		font-size:70px;
 		font-weight:900;
 		text-align:left;
@@ -236,7 +236,7 @@ a{
 	}	
 
 	.humpback-h2{
-		color:#96c6e2
+		color:#96c6e2;
 	}	
 
 	.homepage-h2{
